<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.christianquintero.app3.modulo3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.070"
        android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not"
                android:gravity="center"
                android:textSize="30dp"
                android:textStyle="bold|italic"
                android:id="@+id/tv1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/q"
                android:textColor="@color/BlueDodger"
                android:textSize="20dp"
                android:textStyle="bold"
                android:typeface="serif"
                android:layout_gravity="center"
                android:shadowColor="@color/Black"
                android:shadowRadius="3"
                android:shadowDx="2"/>
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="136dp"
                android:inputType="numberDecimal"
                android:id="@+id/quiz"
                android:hint="@string/defecto"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ex"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="@color/BlueDodger"
                android:shadowColor="@color/Black"
                android:shadowRadius="3"
                android:shadowDx="2"/>
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:inputType="numberDecimal"
                android:id="@+id/expo"
                android:hint="@string/defecto"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pra"
                android:typeface="serif"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:textColor="@color/BlueDodger"
                android:shadowColor="@color/Black"
                android:shadowRadius="3"
                android:shadowDx="2"/>
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:inputType="numberDecimal"
                android:id="@+id/laboratorio"
                android:hint="@string/defecto"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pro"
                android:textSize="20dp"
                android:textStyle="bold"
                android:typeface="serif"
                android:layout_gravity="center"
                android:textColor="@color/BlueDodger"
                android:shadowColor="@color/Black"
                android:shadowRadius="3"
                android:shadowDx="2"/>
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="73dp"
                android:inputType="numberDecimal"
                android:id="@+id/fin"
                android:hint="@string/defecto"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/nota"
            android:textColor="@color/BlueDodger"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:shadowColor="@color/Black"
            android:shadowRadius="3"
            android:shadowDx="3"
            android:id="@+id/outNota"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/calcular"
            android:onClick="notaFinal"
            />
    </LinearLayout>



</LinearLayout>
